raul (9999) unstable;

  * Remove glib dpendency
  * Remove OSC and RDF library dependent code
  * Remove remaining library code, now header only
  * Improve RingBuffer
  * Add ThreadVar, a thread-specific variable class
  * Implement Semaphore for Windows
  * Improve test suite
  * Remove several questionable classes
  * Add INSTALL file
  * Update license to GPL3+

 -- David Robillard <d@drobilla.net>

raul (0.8.0) stable;

  * Implement Semaphore for Darwin
  * Remove unused/trivial/inappropriate Command and Stateful
  * Remove pointless templateification of RingBuffer
  * Use uint32_t consistently for sizes in RingBuffer
  * Fix off-by-one allocation of Atom strings
  * Add all classes to 'raul' doxygen group
  * Make single-argument constructors explicit
  * Fix incorrect TimeSlice::beats_to_ticks
  * Fix crash bug in List::chop_front
  * Fix TimeStamp comparison operators
  * Rename LOG_* defines RAUL_LOG_*
  * Remove "using namespace" declarations
  * Add missing #includes
  * Add missing COPYING file to distribution
  * Upgrade to waf 1.6.2
  * Fix accidental build system dependency on glibmm (now glib only)
  * Better documentation generation via waf tool

 -- David Robillard <d@drobilla.net>  Tue, 11 Jan 2011 17:42:07 -0500

raul (0.7.0) stable;

  * Add several unit tests
  * Use malloc'd memory for RingBuffer/SRSWQueue (instead of a new'd array)
  * Fancy coloured console/logging I/O (raul/log.hpp)
  * More flexible Path and better URI support
  * Atom updates, including new "Blank" Atom for storing dictionaries
    with URI keys (ala JavaScript "objects", but RDF compatible)
  * Remove stack stuff from Array and create new ArrayStack
  * Make Symbol and URI more opaque and use Glib string interning
  * Add Configuration class for app command line option handling
  * Use < operator in TableImpl instead of > so it needn't be defined
  * Add IntrusivePtr, a trivial #define of boost::intrusive_ptr which is